added homepage style and buttons, as well as importing fonts

--- a/src/app/login-page/login-page.component.html
+++ b/src/app/login-page/login-page.component.html
@@ -1,3 +1,5 @@
-<button class= "btn loginBtn btn-primary">Login</button>
-<button class= "btn signUpBtn btn-primary">Sign Up</button>
-<button routerLink="game" class= "btn playBtn btn-danger">Play</button>
+<div class="btnCont">
+  <button class= "btn loginBtn btn-dark">Login</button>
+  <button class= "btn signUpBtn btn-dark">Sign Up</button>
+  <button routerLink="game" class= "btn playBtn btn-danger">Play</button>
+</div>
