--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -1,3 +1,17 @@
 .mainCont{
-    background-image: ".tree_background";
+    background-image: url("http://huffparanormal.com/wp-content/uploads/2016/01/bigstock-spooky-old-cemetery-on-a-foggy-40839412.jpg");
+    background-repeat: no-repeat;
+    background-attachment: fixed;
+    background-position: center;
+    background-size: cover;
+    min-width: 100%;
+    height:100vh;
+}
+@font-face {
+    font-family: MetalMacabre;
+    src: url("../assets/fonts/MetalMacabre.ttf") format("opentype");
+}
+@font-face{
+    font-family: Endor;
+    src: url("../assets/fonts/ENDORALT.ttf") format("opentype")
 }
