--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -5,7 +5,8 @@
     background-position: center;
     background-size: cover;
     min-width: 100%;
-    height:100vh;
+    min-height:100vh;
+    overflow: auto;
 }
 @font-face {
     font-family: MetalMacabre;
