--- a/src/app/game-play/game-play.component.html
+++ b/src/app/game-play/game-play.component.html
@@ -1,3 +1,5 @@
-<p>
-  game-play works!
-</p>
+<div class="boardContainer">
+  <div *ngFor="let position of board" id={{position.id}} class="boardPiece">
+
+  </div>
+</div>
