fixed state from components to services

--- a/src/app/game-play/game-play.component.html
+++ b/src/app/game-play/game-play.component.html
@@ -1,5 +1,5 @@
 <div class="boardContainer">
-  <div *ngFor="let position of board" id={{position.id}} class="boardPiece">
+  <div *ngFor="let position of this._TrolltollService.board" id={{position.id}} class="boardPiece">
 
   </div>
 </div>
