styled board and information comtainers

--- a/src/app/game-play/game-play.component.html
+++ b/src/app/game-play/game-play.component.html
@@ -1,5 +1,15 @@
-<div class="boardContainer">
-  <div *ngFor="let position of board" id={{position.id}} class="boardPiece">
+<div class="mainPage">
+  <div class="boardArea">
+    <div class="boardContainer">
+      <div *ngFor="let position of board" id={{position.id}} class="boardPiece"></div>
+    </div>
+  </div>
+  <div class="inPlayCont">
+    <h2>In Play</h2>
+
+  </div>
+  <div class="pieceInfoCont">
+    <h2>Piece Information</h2>
 
   </div>
 </div>
