--- a/src/app/game-play/game-play.component.scss
+++ b/src/app/game-play/game-play.component.scss
@@ -1,12 +1,44 @@
+.mainPage{
+    display: flex;
+    flex-direction: row;
+    justify-content: space-around;
+}
 .boardContainer{
     display:flex;
     flex-wrap: wrap;
-    max-width:600px;
+    max-width:39.6em;
+    margin-left:2em;
 }
 .boardPiece{
-
-    min-height: 48px;
+    min-height: 3.3em;
     border: 1px solid black;
     background-color: white;
-    min-width: 48px;
+    min-width: 3.3em;
+}
+.pieceInfoCont{
+    width:20%;
+    border: .2em solid  rgba(0, 0, 0, .4);
+    text-shadow: -1px 0 black, 0 1px black, 1px 0 black, 0 -1px black;
+    background-color: rgba(192, 192, 192, .6); 
+    height: 40em;
+    color:white;
+    text-align: center;
+
+}
+.inPlayCont{
+    height: 40em;
+    color:white;
+    text-align: center;
+    width:20%;
+    border: .2em solid  rgba(0, 0, 0, .4);
+    text-shadow: -1px 0 black, 0 1px black, 1px 0 black, 0 -1px black;
+    background-color: rgba(192, 192, 192, .6); 
+}
+.boardArea{
+    display: flex;
+    justify-content: center;
+    height: auto;
+    width: 50%;
+    
+
 }
