--- a/src/app/game-play/game-play.component.scss
+++ b/src/app/game-play/game-play.component.scss
@@ -12,7 +12,7 @@
 .boardPiece{
     min-height: 3.3em;
     border: 1px solid black;
-    background-color: white;
+    background-color: whitesmoke;
     min-width: 3.3em;
     img{
         height: 3em;
