--- a/src/app/game-play/game-play.component.scss
+++ b/src/app/game-play/game-play.component.scss
@@ -56,3 +56,9 @@
         margin-top: 1em;
     }
 }
+.player1Unit{
+    background-color:rgba(128, 0, 128, 0.507)
+}
+.player2Unit{
+    background-color:rgba(167, 167, 0, 0.521)
+}
