set up basic move function skeleton

--- a/src/app/game-play/game-play.component.html
+++ b/src/app/game-play/game-play.component.html
@@ -1,11 +1,11 @@
 <div class="mainPage">
   <div class="boardArea">
     <div class="boardContainer" *ngIf="start">
-      <div *ngFor="let position of this._TrolltollService.board" id={{position.id}}
+      <div *ngFor="let position of this._TrolltollService.board" id={{position.id}} (click)="movePiece($event)"
         class="boardPiece {{position.player === 1 ? 'player1Unit' : position.player === 2 ? 'player2Unit' : ''}}">
         <!-- {{position.piece.type==="Knight" ? "K" : ""}} -->
         <!-- <img src="{{position.piece.type=== 'Knight' ? position.piece.image : ''}}"> -->
-        <img (click)="populateInfo(position.piece)" src="{{position.piece.type=== 'Knight' ? position.piece.image : position.piece.type === 'Mage' ? position.piece.image : position.piece.type === 'Ranger' ? position.piece.image : position.piece.type === 'Cleric' ? position.piece.image : ''}}">
+        <img  (mouseover)="populateInfo(position.piece)" src="{{position.piece.type=== 'Knight' ? position.piece.image : position.piece.type === 'Mage' ? position.piece.image : position.piece.type === 'Ranger' ? position.piece.image : position.piece.type === 'Cleric' ? position.piece.image : ''}}">
       </div>
     </div>
     <div>
