--- a/src/app/login-page/login-page.component.scss
+++ b/src/app/login-page/login-page.component.scss
@@ -19,3 +19,22 @@
     }
 
 }
+.closingButtons{
+    margin:10px;
+}
+.clearfix{
+    
+    button{
+        min-width: 30%;
+        font-family: Endor;
+        font-size: 3em;
+        box-shadow: 0px 00px .1em .1em rgba(188, 187, 182, 0.797);
+        color:#BCBBB6;
+
+        &:hover{
+            -webkit-transform: scale(1.2);
+            transform: scale(1.1);
+            color:whitesmoke;
+        }
+    }
+}
