--- a/src/app/login-page/login-page.component.scss
+++ b/src/app/login-page/login-page.component.scss
@@ -23,13 +23,17 @@
     margin:10px;
 }
 .clearfix{
+    display: flex;
+    flex-direction: row;
+    justify-content: space-around;
     
     button{
         min-width: 30%;
         font-family: Endor;
         font-size: 3em;
-        box-shadow: 0px 00px .1em .1em rgba(188, 187, 182, 0.797);
+        box-shadow: 0px 00px .1em .1em rgba(82, 82, 82, 0.797);
         color:#BCBBB6;
+        
 
         &:hover{
             -webkit-transform: scale(1.2);
@@ -37,4 +41,26 @@
             color:whitesmoke;
         }
     }
+}
+.loginInfoCont{
+    width: 29em;
+    display: flex;
+    flex-direction: column;
+    h1{
+        text-align: center;
+        font-size: 4em;
+        margin-bottom: -.7em;   
+    }
+    label{
+        font-size: 3em;
+    }
+    input{
+        border: 1px solid black;
+        font-size: 2em;
+
+    }
+}
+.modal-content{
+    font-family: Endor;
+    background-color: #B2B3B7
 }
