--- a/src/app/game-play/game-play.component.scss
+++ b/src/app/game-play/game-play.component.scss
@@ -103,4 +103,7 @@
 .player2Unit{
     background-color:rgba(167, 167, 0, 0.521)
 }
+.potential {
+    background-color: rgba(0, 0, 255, 0.488);
+}
 
