some basic style

--- a/src/app/game-play/game-play.component.scss
+++ b/src/app/game-play/game-play.component.scss
@@ -31,6 +31,7 @@
     height: 40em;
     color:white;
     text-align: center;
+    padding-bottom: .5em;
     h2{
         font-size: 4em;
     }
@@ -78,7 +79,7 @@
     img{
         align-self: center;
         height: 12em;
-        margin-top: -.4em;
+        margin-top: -1.5em;
 
     }
     h4{
