added current player to state and made it set to true

--- a/src/app/game-play/game-play.component.scss
+++ b/src/app/game-play/game-play.component.scss
@@ -105,6 +105,9 @@
 .potential {
     background-color: rgba(0, 0, 255, 0.488);
 }
+.attack {
+    background-color: rgba(255, 0, 0, 0.502)
+}
 .player1Unit{
     background-color:rgba(128, 0, 128, 0.507)
 }
