--- a/src/app/game-play/game-play.component.scss
+++ b/src/app/game-play/game-play.component.scss
@@ -38,14 +38,28 @@
 
 }
 .inPlayCont{
+    display:flex;
+    justify-content: space-between;
+    flex-direction: column;
     font-family: Endor;
     height: 40em;
     color:white;
     text-align: center;
-    width:20%;
+    width:30%;
     border: .2em solid  rgba(0, 0, 0, .4);
     text-shadow: -2px 0 black, 0 2px black, 2px 0 black, 0 -2px black;
     background-color: rgba(192, 192, 192, .8); 
+    h2{
+        font-size: 4em;
+        justify-content: center;
+    }
+    .row{
+        font-size: 2em;
+        justify-content: space-around;
+
+    }
+
+
 }
 .boardArea{
     display: flex;
@@ -113,4 +127,7 @@
 }
 .player2Unit{
     background-color:rgba(167, 167, 0, 0.521)
+}
+.hidden{
+    display:none
 }
