hid button on board reset

--- a/src/app/game-play/game-play.component.html
+++ b/src/app/game-play/game-play.component.html
@@ -9,7 +9,7 @@
       </div>
     </div>
     <div>
-      <button (click)="this.setBoard()">Click me</button>
+      <button class="closingButtons btn-dark cancelbtn {{start=== true ? 'hidden' : ''}}"  (click)="this.setBoard()">Set the Board</button>
     </div>
   </div>
 
