--- a/src/app/game-play/game-play.component.html
+++ b/src/app/game-play/game-play.component.html
@@ -1,14 +1,18 @@
-<div class="mainPage">
-    <div>
-      <button class="setButton btn-dark cancelbtn {{start=== true ? 'hidden' : ''}}"
-        (click)="this.setBoard()">Set the Board</button>
-    </div>
+<div class="victoryCont {{gameOver === true ? '':'hidden'}}">
+  <button class="btn-dark" (click)="this.setBoard()">
+    <h1 class="victory row"><b>VICTORY!<br> Player 2 Wins!</b></h1>
+  </button>
+</div>
+
+<div class="mainPage {{gameOver ? 'hidden': ''}}">
+  <div>
+    <button class="setButton btn-dark cancelbtn {{start=== true ? 'hidden' : ''}}"
+      (click)="this.setBoard()">Set the Board</button>
+  </div>
   <div class="boardArea {{start=== true ? '' : 'hidden'}}">
     <div class="boardContainer" *ngIf="start">
       <div *ngFor="let position of this._TrolltollService.board" id={{position.id}}
         (click)="movePiece($event)" class="boardPiece  {{position.player === 1 ? 'player1Unit' : position.player === 2 ? 'player2Unit' : position.potentialMove ? 'potential' : position.potentialAttack ? 'attack': ''}}">
-        <!-- {{position.piece.type==="Knight" ? "K" : ""}} -->
-        <!-- <img src="{{position.piece.type=== 'Knight' ? position.piece.image : ''}}"> -->
         <img (mouseover)="populateInfo(position.piece)" src="{{position.piece.type=== 'Knight' ? position.piece.image : position.piece.type === 'Mage' ? position.piece.image : position.piece.type === 'Ranger' ? position.piece.image : position.piece.type === 'Cleric' ? position.piece.image : ''}}">
       </div>
     </div>
@@ -51,10 +55,10 @@
         <h4>{{selectedPiece.type}}</h4>
       </div>
       <div>
-        
+
       </div>
       <div class="infoText">
-        <h6>Health: <canvas id="healthChart" width="200" height="50"></canvas></h6> 
+        <h6>Health: <canvas id="healthChart" width="200" height="50"></canvas></h6>
         <h6>Attack: <canvas id="attackChart" width="200" height="50"></canvas></h6>
         <h6>Defense: <canvas id="defenseChart" width="200" height="50"></canvas></h6>
         <h6>Attack Range: <canvas id="attackRangeChart" width="200" height="50"></canvas></h6>
