--- a/src/app/game-play/game-play.component.scss
+++ b/src/app/game-play/game-play.component.scss
@@ -166,6 +166,24 @@
         color:whitesmoke;
     }
 }
+.victoryCont{
+    display:flex;
+    flex-direction: column;
+    align-items: center;
+    button{
+        box-shadow: 0px 00px .1em .1em rgba(218, 153, 32, 0.797);
+        color:#BCBBB6;
+        min-width: 50%;
+        padding-left:11.1%;
+        background-color: rgba(0, 0, 0, 0.527);
+        border-radius: 5%;
+    }
+    .victory{
+        font-family: Endor;
+        font-size: 10em;
+        color:rgb(218, 153, 32);
+    }
+}
 .hidden{
     display:none;
 }
