finished style on charts

--- a/src/app/game-play/game-play.component.html
+++ b/src/app/game-play/game-play.component.html
@@ -49,21 +49,21 @@
     <div class="pieceInfoTitle">
       <h2>Piece Information</h2>
     </div>
-    <div class="pieceInfoDisplay">
-      <div class="infoImage">
-        <img class src="{{selectedPiece.image}}" />
+    <div class="pieceInfoDisplay ">
+      <div class="infoImage row">
         <h4>{{selectedPiece.type}}</h4>
+        <img class src="{{selectedPiece.image}}" />
       </div>
       <div>
 
       </div>
       <div class="infoText">
-        <h6>Health: <canvas id="healthChart" width="200" height="50"></canvas></h6>
-        <h6>Attack: <canvas id="attackChart" width="200" height="50"></canvas></h6>
-        <h6>Defense: <canvas id="defenseChart" width="200" height="50"></canvas></h6>
-        <h6>Attack Range: <canvas id="attackRangeChart" width="200" height="50"></canvas></h6>
-        <h6>Move Range: <canvas id="moveRangeChart" width="200" height="50"></canvas></h6>
-        <h6>Cool Down: <canvas id="coolDownChart" width="200" height="50"></canvas></h6>
+        <h6>Health: <canvas id="healthChart" width="200px" height="25px"></canvas></h6>
+        <h6>Attack: <canvas id="attackChart" width="200px" height="25px"></canvas></h6>
+        <h6>Defense: <canvas id="defenseChart" width="200px" height="25px"></canvas></h6>
+        <h6>Attack Range: <canvas id="attackRangeChart" width="200px" height="25px"></canvas></h6>
+        <h6>Move Range: <canvas id="moveRangeChart" width="200px" height="25px"></canvas></h6>
+        <h6>Cool Down: <canvas id="coolDownChart" width="200px" height="25px"></canvas></h6>
         <!-- <h6>Defense: {{selectedPiece.defense}}</h6>
         <h6>Attack Range: {{selectedPiece.attackRange}}</h6>
         <h6>Move Range: {{selectedPiece.moveRange}}</h6>
