--- a/src/app/game-play/game-play.component.scss
+++ b/src/app/game-play/game-play.component.scss
@@ -121,12 +121,15 @@
     h6{
         margin-left:.1em;
         text-align: left;
-        font-size: 3em;
-        margin-top: -.2em;
+        font-size: 1.7em;
+
+        margin-top: -.6em;
     }
     
 }
 .infoImage{
+    display:flex;
+    justify-content: space-around;
     min-height:30%;
     max-height:30%;
 }
