--- a/src/app/game-play/game-play.component.scss
+++ b/src/app/game-play/game-play.component.scss
@@ -78,6 +78,12 @@
     .middle{
         justify-content: center;
     }
+    .purple{
+        color:rgba(175, 0, 175, 0.856);
+    }
+    .yellow{
+        color:rgba(167, 167, 0, 0.863);
+    }
 }
 .boardArea{
     display: flex;
