changed style of displayed player infromation

--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -16,4 +16,12 @@
     font-family: Endor;
     src: url("../assets/fonts/ENDORALT.ttf") format("opentype")
 }
+@font-face{
+    font-family: GodOfWar;
+    src: url("../assets/fonts/GODOFWAR.ttf") format("opentype")
+}
+@font-face{
+    font-family: Deutsch;
+    src: url("../assets/fonts/Deutsch.ttf") format("opentype")
+}
 
