--- a/src/app/game-play/game-play.component.html
+++ b/src/app/game-play/game-play.component.html
@@ -24,7 +24,7 @@
       <button (click)="deselectUnit()">Deselect</button>
     </div>
     <div class='row'>
-      <h3 class="{{movePiecePhase ? 'red' : ''}}">Move Unit</h3>
+      <h3 class="{{movePiecePhase ? 'blue' : ''}}">Move Unit</h3>
       <button (click)="noMove()">No Move</button>
 
     </div>
@@ -38,32 +38,38 @@
     <div class='row middle'>
       <h3>Timer</h3>
     </div>
-
-    <!-- <div *ngFor="let piece of units">
-      <div class="imgContInPlay">
-        <img src="{{piece.image}}">
-      </div>
-    </div> -->
   </div>
   <div class="pieceInfoCont">
     <div class="pieceInfoTitle">
-      <h2>Piece Information</h2>
+      <h2>{{selectedPiece.type}}</h2>
     </div>
     <div class="pieceInfoDisplay ">
       <div class="infoImage row">
-        <h4>{{selectedPiece.type}}</h4>
         <img class src="{{selectedPiece.image}}" />
       </div>
       <div>
 
       </div>
       <div class="infoText">
-        <h6>Health: <canvas id="healthChart" width="200px" height="25px"></canvas></h6>
-        <h6>Attack: <canvas id="attackChart" width="200px" height="25px"></canvas></h6>
-        <h6>Defense: <canvas id="defenseChart" width="200px" height="25px"></canvas></h6>
-        <h6>Attack Range: <canvas id="attackRangeChart" width="200px" height="25px"></canvas></h6>
-        <h6>Move Range: <canvas id="moveRangeChart" width="200px" height="25px"></canvas></h6>
-        <h6>Cool Down: <canvas id="coolDownChart" width="200px" height="25px"></canvas></h6>
+        <div style="height:10vh; width:20vw" class="graphTextCont"> 
+          <h6 class="graphText ">Health: <canvas id="healthChart" position="right"width="200px" height="25px"></canvas></h6>
+          
+        </div>
+        <div style="height:10vh; width:20vw" class="graphTextCont">
+          <h6 class="graphText row">Attack: <canvas id="attackChart" width="200px" height="25px"></canvas></h6>
+        </div>
+        <div style="height:10vh; width:20vw" class="graphTextCont">
+          <h6 class="graphText row">Defense: <canvas id="defenseChart" width="200px" height="25px"></canvas></h6>
+        </div>
+        <div style="height:10vh; width:20vw" class="graphTextCont">
+          <h6 class="graphText row">Attack Range: <canvas id="attackRangeChart" width="200px" height="25px"></canvas></h6>
+        </div>
+        <div style="height:10vh; width:20vw" class="graphTextCont"> 
+          <h6 class="graphText row">Move Range: <canvas id="moveRangeChart" width="200px" height="25px"></canvas></h6>
+        </div>
+        <div style="height:10vh; width:20vw" class="graphTextCont">
+          <h6 class="graphText row">Cool Down: <canvas id="coolDownChart" width="200px" height="25px"></canvas></h6>
+        </div>
         <!-- <h6>Defense: {{selectedPiece.defense}}</h6>
         <h6>Attack Range: {{selectedPiece.attackRange}}</h6>
         <h6>Move Range: {{selectedPiece.moveRange}}</h6>
