--- a/src/app/game-play/game-play.component.scss
+++ b/src/app/game-play/game-play.component.scss
@@ -23,15 +23,16 @@
     }
 }
 .pieceInfoCont{
-    font-family: Endor;
-    width:20%;
+    font-family: Deutsch;
+    width:30%;
     border: .2em solid  rgba(0, 0, 0, .4);
-    text-shadow: -2px 0 black, 0 2px black, 2px 0 black, 0 -2px black;
     background-color: rgba(192, 192, 192, .8); 
     height: 40em;
-    color:white;
+    color:black;
     text-align: center;
-    padding-bottom: .5em;
+    padding: .5em;
+    margin-left: .2em;
+    margin-right: .2em;
     h2{
         font-size: 4em;
     }
@@ -41,29 +42,29 @@
     display:flex;
     justify-content: space-between;
     flex-direction: column;
-    font-family: Endor;
+    font-family: deutsch;
     height: 40em;
-    color:white;
     text-align: center;
     width:30%;
     border: .2em solid  rgba(0, 0, 0, .4);
-    text-shadow: -2px 0 black, 0 2px black, 2px 0 black, 0 -2px black;
     background-color: rgba(192, 192, 192, .8); 
     padding:3em;
     .row{
         justify-content: space-between;
     }
     h3{
-        font-size: 3em;
+        font-size: 2.5em;
+        font-family: Deutsch;
+        text-shadow: none;
+
     }
     h2{
-        font-size: 4em;
+        font-size: 5em;
         text-align: center;
-        // justify-content: center;
     }
     button{
-        min-width: 3em;
-        font-family: Endor;
+        width: 2.5em;
+        font-family: endor;
         font-size: 2.5em;
         box-shadow: 0px 00px .1em .1em rgba(82, 82, 82, 0.7);
         color:black;
@@ -129,13 +130,24 @@
 }
 .infoImage{
     display:flex;
-    justify-content: space-around;
-    min-height:30%;
-    max-height:30%;
+    justify-content: flex-end;
+    min-height:25%;
+    max-height:25%;
 }
 .infoText{
-    min-height:20em;
-    max-height:20em
+    min-height:30em;
+    max-height:30em;
+    display: flex;
+    flex-direction: column;
+    h6{
+    font-family: deutsch;
+    flex-direction: row;
+    }
+    .graphTextCont{
+        display: flex;
+        margin-bottom: .2em;
+        flex-direction: column;
+    }
 }
 
 .potential {
@@ -153,9 +165,12 @@
 .red{
     color:rgb(245, 115, 115);
 }
+.blue{
+    color: rgba(0, 0, 255, 0.488);
+}
 .setButton{
     min-width: 30%;
-    font-family: Endor;
+    font-family: deutsch;
     font-size: 3em;
     box-shadow: 0px 00px .1em .1em rgba(82, 82, 82, 0.797);
     color:#BCBBB6;
@@ -182,11 +197,14 @@
         border-radius: 5%;
     }
     .victory{
-        font-family: Endor;
+        font-family: deutsch;
         font-size: 10em;
         color:rgb(218, 153, 32);
     }
 }
 .hidden{
     display:none;
+}
+.graphText {
+    font-family: Deutsch;
 }
