fixed some css issues

--- a/src/app/game-play/game-play.component.html
+++ b/src/app/game-play/game-play.component.html
@@ -40,6 +40,7 @@
     </div>
     <div class='row middle'>
       <h3>Timer</h3>
+      <button class="setButton btn-danger helpBtn">Help</button>
     </div>
   </div>
   <div class="pieceInfoCont">
@@ -73,10 +74,6 @@
         <div style="height:10vh; width:20vw" class="graphTextCont">
           <h6 class="graphText row">Cool Down: <canvas id="coolDownChart" width="200px" height="25px"></canvas></h6>
         </div>
-        <!-- <h6>Defense: {{selectedPiece.defense}}</h6>
-        <h6>Attack Range: {{selectedPiece.attackRange}}</h6>
-        <h6>Move Range: {{selectedPiece.moveRange}}</h6>
-        <h6>Cool Down: {{selectedPiece.coolDown}}</h6> -->
       </div>
     </div>
   </div>
