--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -1,1 +1,4 @@
-<h1 class="headerText">Troll Toll</h1>
+<div class="headerCont row">
+    <h1 class="headerText"><b>TROLL</b></h1>
+    <h1 class="headerText"><b>WARS</b></h1>
+</div>
