--- a/src/app/header/header.component.scss
+++ b/src/app/header/header.component.scss
@@ -1,6 +1,6 @@
 .headerText{
-    padding-top:.5em;
-    margin-left: .2em;
-    font-size: 6em;
-    font-family: MetalMacabre;  
+    margin-left: .75em;
+    font-size: 9em;
+    font-family: Endor; 
+    
 }
